--- a/secao-08/src/main/resources/application.yml
+++ b/secao-08/src/main/resources/application.yml
@@ -14,3 +14,8 @@ spring:
         format_sql: true
         dialect: org.hibernate.dialect.MySQL8Dialect
 
+logging:
+  level:
+    br.com.walker.aprendizado_sobre_springboot_erudio: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
